--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,6 @@
 #header_img {
-    /* background-image: 
-        url(images/b17.jpg); */
+    background-image: 
+        url(images/b17.jpg);
     height: 600px;
 }
 
